Travis update: Jul 2024 (Build 759)
[skip ci]
